--- a/openApiDocs/beta/Identity.SignIns.yml
+++ b/openApiDocs/beta/Identity.SignIns.yml
@@ -598,7 +598,11 @@ paths:
     get:
       tags:
         - identity.authenticationEventListener
-      summary: Get authenticationEventListeners from identity
+      summary: List authenticationEventListeners
+      description: Get a list of the authenticationEventListener objects and their properties. Only the onTokenIssuanceStartListener type is supported.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/identitycontainer-list-authenticationeventlisteners?view=graph-rest-1.0
       operationId: identity_ListAuthenticationEventListener
       parameters:
         - $ref: '#/components/parameters/top'
@@ -664,7 +668,11 @@ paths:
     post:
       tags:
         - identity.authenticationEventListener
-      summary: Create new navigation property to authenticationEventListeners for identity
+      summary: Create authenticationEventListener
+      description: Create a new authenticationEventListener object. Only the onTokenIssuanceStartListener type is supported.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/identitycontainer-post-authenticationeventlisteners?view=graph-rest-1.0
       operationId: identity_CreateAuthenticationEventListener
       requestBody:
         description: New navigation property
@@ -738,7 +746,11 @@ paths:
     patch:
       tags:
         - identity.authenticationEventListener
-      summary: Update the navigation property authenticationEventListeners in identity
+      summary: Update authenticationEventListener
+      description: Update the properties of an authenticationEventListener object. You must specify the **@odata.type** property and the value of the authenticationEventListener object type to update.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/authenticationeventlistener-update?view=graph-rest-1.0
       operationId: identity_UpdateAuthenticationEventListener
       parameters:
         - name: authenticationEventListener-id
@@ -769,7 +781,11 @@ paths:
     delete:
       tags:
         - identity.authenticationEventListener
-      summary: Delete navigation property authenticationEventListeners for identity
+      summary: Delete authenticationEventListener
+      description: Deletes an authenticationEventListener object.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/authenticationeventlistener-delete?view=graph-rest-1.0
       operationId: identity_DeleteAuthenticationEventListener
       parameters:
         - name: authenticationEventListener-id
@@ -7587,11 +7603,11 @@ paths:
     get:
       tags:
         - identity.conditionalAccessRoot
-      summary: Get namedLocation
-      description: Retrieve the properties and relationships of a namedLocation object.
+      summary: Get countryNamedLocation
+      description: Retrieve the properties and relationships of a countryNamedLocation object.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/namedlocation-get?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/countrynamedlocation-get?view=graph-rest-1.0
       operationId: identity.conditionalAccess_GetNamedLocation
       parameters:
         - name: namedLocation-id
@@ -7642,11 +7658,11 @@ paths:
     patch:
       tags:
         - identity.conditionalAccessRoot
-      summary: Update countryNamedLocation
-      description: Update the properties of a countryNamedLocation object.
+      summary: Update ipNamedlocation
+      description: Update the properties of an ipNamedLocation object.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/countrynamedlocation-update?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/ipnamedlocation-update?view=graph-rest-1.0
       operationId: identity.conditionalAccess_UpdateNamedLocation
       parameters:
         - name: namedLocation-id
@@ -7677,11 +7693,11 @@ paths:
     delete:
       tags:
         - identity.conditionalAccessRoot
-      summary: Delete namedLocation
-      description: Delete a namedLocation object.
+      summary: Delete ipNamedLocation
+      description: Delete an ipNamedLocation object.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/namedlocation-delete?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/ipnamedlocation-delete?view=graph-rest-1.0
       operationId: identity.conditionalAccess_DeleteNamedLocation
       parameters:
         - name: namedLocation-id
@@ -8214,7 +8230,11 @@ paths:
     get:
       tags:
         - identity.customAuthenticationExtension
-      summary: Get customAuthenticationExtensions from identity
+      summary: List customAuthenticationExtensions
+      description: 'Get a list of the customAuthenticationExtension objects and their properties. Currently, only onTokenIssuanceStartCustomExtension objects are returned.'
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/identitycontainer-list-customauthenticationextensions?view=graph-rest-1.0
       operationId: identity_ListCustomAuthenticationExtension
       parameters:
         - $ref: '#/components/parameters/top'
@@ -8286,7 +8306,11 @@ paths:
     post:
       tags:
         - identity.customAuthenticationExtension
-      summary: Create new navigation property to customAuthenticationExtensions for identity
+      summary: Create customAuthenticationExtension
+      description: Create a new customAuthenticationExtension object. Only the **onTokenIssuanceStartCustomExtension** object type is supported.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/identitycontainer-post-customauthenticationextensions?view=graph-rest-1.0
       operationId: identity_CreateCustomAuthenticationExtension
       requestBody:
         description: New navigation property
@@ -8309,7 +8333,11 @@ paths:
     get:
       tags:
         - identity.customAuthenticationExtension
-      summary: Get customAuthenticationExtensions from identity
+      summary: Get authenticationEventListener
+      description: Read the properties and relationships of an authenticationEventListener object. The **@odata.type** property in the response object indicates the type of the authenticationEventListener object.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/authenticationeventlistener-get?view=graph-rest-1.0
       operationId: identity_GetCustomAuthenticationExtension
       parameters:
         - name: customAuthenticationExtension-id
@@ -8393,7 +8421,11 @@ paths:
     delete:
       tags:
         - identity.customAuthenticationExtension
-      summary: Delete navigation property customAuthenticationExtensions for identity
+      summary: Delete customAuthenticationExtension
+      description: Delete a customAuthenticationExtension object.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/customauthenticationextension-delete?view=graph-rest-1.0
       operationId: identity_DeleteCustomAuthenticationExtension
       parameters:
         - name: customAuthenticationExtension-id
@@ -8421,6 +8453,10 @@ paths:
       tags:
         - identity.Actions
       summary: Invoke action validateAuthenticationConfiguration
+      description: An API to check validity of the endpoint and and authentication configuration for a customAuthenticationExtension.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/customauthenticationextension-validateauthenticationconfiguration?view=graph-rest-1.0
       operationId: identity.customAuthenticationExtension_validateAuthenticationConfiguration
       parameters:
         - name: customAuthenticationExtension-id
@@ -10227,11 +10263,11 @@ paths:
     get:
       tags:
         - identityProtection.riskyUser
-      summary: List riskyUsers
-      description: Retrieve the properties and relationships of a collection of **riskyUser** objects.
+      summary: Get riskyUser
+      description: Retrieve the properties and relationships of a **riskyUser** object.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/riskyusers-list?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/riskyusers-get?view=graph-rest-1.0
       operationId: identityProtection_ListRiskyUser
       parameters:
         - $ref: '#/components/parameters/top'
@@ -14162,6 +14198,7 @@ paths:
                 - identities
                 - imAddresses
                 - infoCatalogs
+                - isLicenseReconciliationNeeded
                 - isManagementRestricted
                 - isResourceAccount
                 - jobTitle
@@ -18928,7 +18965,7 @@ paths:
       tags:
         - policies.crossTenantAccessPolicy
       summary: Get crossTenantIdentitySyncPolicyPartner
-      description: Read the user synchronization policy of a partner-specific configuration.
+      description: Get the user synchronization policy of a partner-specific configuration.
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/crosstenantidentitysyncpolicypartner-get?view=graph-rest-1.0
@@ -32475,6 +32512,7 @@ components:
           properties:
             authenticationEventsFlowId:
               type: string
+              description: The identifier of the authenticationEventsFlow object.
               nullable: true
             conditions:
               $ref: '#/components/schemas/microsoft.graph.authenticationConditions'
@@ -32482,6 +32520,7 @@ components:
               maximum: 2147483647
               minimum: -2147483648
               type: integer
+              description: The priority of this handler. Between 0 (lower priority) and 1000 (higher priority).
               format: int32
           additionalProperties:
             type: object
@@ -33020,10 +33059,12 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.genericError'
+          description: Errors in the validation result of a customAuthenticationExtension.
         warnings:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.genericError'
+          description: Warnings in the validation result of a customAuthenticationExtension.
       additionalProperties:
         type: object
     microsoft.graph.customExtensionEndpointConfiguration:
@@ -33995,6 +34036,10 @@ components:
               items:
                 type: string
               description: 'Identifies the info segments assigned to the user.  Supports $filter (eq, not, ge, le, startsWith).'
+            isLicenseReconciliationNeeded:
+              type: boolean
+              description: Indicates whether the user is pending an exchange mailbox license assignment.  Read-only.  Supports $filter (eq where true only).
+              nullable: true
             isManagementRestricted:
               type: boolean
               nullable: true
@@ -34125,6 +34170,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.serviceProvisioningError'
+              description: 'Errors published by a federated service describing a non-transient, service-specific error regarding the properties or link from a user object .  Supports $filter (eq, not, for isResolved and serviceInstance).'
             showInAddressList:
               type: boolean
               description: Do not use in Microsoft Graph. Manage this property through the Microsoft 365 admin center instead. Represents whether the user should be included in the Outlook global address list. See Known issue.
@@ -34911,7 +34957,7 @@ components:
               description: Indicates whether users can sign up for email based subscriptions.
             allowedToUseSSPR:
               type: boolean
-              description: Indicates whether the Self-Serve Password Reset feature can be used by users on the tenant.
+              description: Indicates whether the Admin Self-Serve Password Reset feature is enabled on the tenant.
             allowEmailVerifiedUsersToJoinOrganization:
               type: boolean
               description: Indicates whether a user can join the tenant by email validation.
@@ -34919,7 +34965,7 @@ components:
               $ref: '#/components/schemas/microsoft.graph.allowInvitesFrom'
             allowUserConsentForRiskyApps:
               type: boolean
-              description: Indicates whether user consent for risky apps is allowed. We recommend to keep this as false.
+              description: Indicates whether user consent for risky apps is allowed. Default value is false. We recommend that you keep the value set to false.
               nullable: true
             blockMsolPowerShell:
               type: boolean
@@ -35073,7 +35119,7 @@ components:
       properties:
         displayName:
           type: string
-          description: Display name for the cross-tenant user synchronization policy. Use the name of the partner Azure AD tenant to easily identify the policy. Optional.
+          description: Display name for the cross-tenant user synchronization policy. Use the name of the partner Azure AD (Azure Active Directory) tenant to easily identify the policy. Optional.
           nullable: true
         tenantId:
           type: string
@@ -36619,10 +36665,10 @@ components:
       properties:
         name:
           type: string
-          description: Name for this key-value pair
+          description: 'Name for this key-value pair. For more information about possible names for each resource type that uses this configuration, see keyValuePair names and values.'
         value:
           type: string
-          description: Value for this key-value pair
+          description: 'Value for this key-value pair. For more information about possible values for each resource type that uses this configuration, see keyValuePair names and values.'
           nullable: true
       additionalProperties:
         type: object
@@ -37107,13 +37153,16 @@ components:
         createdDateTime:
           pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
           type: string
+          description: The date and time at which the error occurred.
           format: date-time
           nullable: true
         isResolved:
           type: boolean
+          description: Indicates whether the Error has been attended to.
           nullable: true
         serviceInstance:
           type: string
+          description: 'Qualified service instance (e.g., ''SharePoint/Dublin'') that published the service error information.'
           nullable: true
       additionalProperties:
         type: object
@@ -38253,6 +38302,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.serviceProvisioningError'
+              description: 'Errors published by a federated service describing a non-transient, service-specific error regarding the properties or link from a group object .  Supports $filter (eq, not, for isResolved and serviceInstance).'
             theme:
               type: string
               description: 'Specifies a Microsoft 365 group''s color theme. Possible values are Teal, Purple, Green, Blue, Pink, Orange or Red. Returned by default.'
@@ -40943,7 +40993,7 @@ components:
       properties:
         isSyncAllowed:
           type: boolean
-          description: 'Defines whether user objects should be synchronized from the partner tenant. If set to false, any current user synchronization from the source tenant to the target tenant will stop. There is no impact on existing users that have already been synchronized.'
+          description: Defines whether user objects should be synchronized from the partner tenant. false causes any current user synchronization from the source tenant to the target tenant to stop. This property has no impact on existing users who have already been synchronized.
           nullable: true
       additionalProperties:
         type: object
@@ -42193,6 +42243,7 @@ components:
       properties:
         includeAllApplications:
           type: boolean
+          description: Whether the custom authentication extension should trigger for all applications with appIds specified in the includeApplications relationship. This property must be set to false for listener of type onTokenIssuanceStartListener.
         includeApplications:
           type: array
           items:
@@ -42454,7 +42505,7 @@ components:
           maximum: 2147483647
           minimum: -2147483648
           type: integer
-          description: The max duration in milliseconds that Azure AD will wait for a response from the logic app before it shuts down the connection. The valid range is between 200 and 2000 milliseconds. Default duration is 1000.
+          description: The max duration in milliseconds that Azure AD will wait for a response from the external app before it shuts down the connection. The valid range is between 200 and 2000 milliseconds. Default duration is 1000.
           format: int32
           nullable: true
       additionalProperties:
@@ -42920,11 +42971,11 @@ components:
           nullable: true
         type:
           type: string
-          description: 'The type of key credential; for example, Symmetric, AsymmetricX509Cert.'
+          description: 'The type of key credential; for example, Symmetric, AsymmetricX509Cert, or X509CertAndPassword.'
           nullable: true
         usage:
           type: string
-          description: 'A string that describes the purpose for which the key can be used; for example, Verify.'
+          description: 'A string that describes the purpose for which the key can be used; for example, None​, Verify​, PairwiseIdentifier​, Delegation​, Decrypt​, Encrypt​, HashedIdentifier​, SelfSignedTls, or Sign. If usage is Sign​, the type should be X509CertAndPassword​, and the passwordCredentials​ for signing should be defined.'
           nullable: true
       additionalProperties:
         type: object
@@ -49408,6 +49459,7 @@ components:
       properties:
         appId:
           type: string
+          description: The identifier for an application corresponding to a condition which will trigger an authenticationEventListener.
       additionalProperties:
         type: object
     microsoft.graph.conditionalAccessFilter:
