--- a/openApiDocs/v1.0/Search.yml
+++ b/openApiDocs/v1.0/Search.yml
@@ -959,6 +959,7 @@ paths:
                 - acl
                 - content
                 - properties
+                - activities
               type: string
         - name: $expand
           in: query
@@ -971,6 +972,7 @@ paths:
             items:
               enum:
                 - '*'
+                - activities
               type: string
       responses:
         2XX:
@@ -1053,6 +1055,7 @@ paths:
                 - acl
                 - content
                 - properties
+                - activities
               type: string
         - name: $expand
           in: query
@@ -1065,6 +1068,7 @@ paths:
             items:
               enum:
                 - '*'
+                - activities
               type: string
       responses:
         2XX:
@@ -1153,6 +1157,445 @@ paths:
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
+  '/external/connections/{externalConnection-id}/items/{externalItem-id}/activities':
+    get:
+      tags:
+        - external.externalConnection
+      summary: Get activities from external
+      description: Returns a list of activities performed on the item. Write-only.
+      operationId: external.connection.item_ListActivity
+      parameters:
+        - name: externalConnection-id
+          in: path
+          description: The unique identifier of externalConnection
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalConnection
+        - name: externalItem-id
+          in: path
+          description: The unique identifier of externalItem
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalItem
+        - $ref: '#/components/parameters/top'
+        - $ref: '#/components/parameters/skip'
+        - $ref: '#/components/parameters/search'
+        - $ref: '#/components/parameters/filter'
+        - $ref: '#/components/parameters/count'
+        - name: $orderby
+          in: query
+          description: Order items by property values
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              enum:
+                - id
+                - id desc
+                - startDateTime
+                - startDateTime desc
+                - type
+                - type desc
+              type: string
+        - name: $select
+          in: query
+          description: Select properties to be returned
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              enum:
+                - id
+                - startDateTime
+                - type
+                - performedBy
+              type: string
+        - name: $expand
+          in: query
+          description: Expand related entities
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              enum:
+                - '*'
+                - performedBy
+              type: string
+      responses:
+        2XX:
+          $ref: '#/components/responses/microsoft.graph.externalConnectors.externalActivityCollectionResponse'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-pageable:
+        nextLinkName: '@odata.nextLink'
+        operationName: listMore
+      x-ms-docs-operation-type: operation
+    post:
+      tags:
+        - external.externalConnection
+      summary: Create new navigation property to activities for external
+      operationId: external.connection.item_CreateActivity
+      parameters:
+        - name: externalConnection-id
+          in: path
+          description: The unique identifier of externalConnection
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalConnection
+        - name: externalItem-id
+          in: path
+          description: The unique identifier of externalItem
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalItem
+      requestBody:
+        description: New navigation property
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/microsoft.graph.externalConnectors.externalActivity'
+        required: true
+      responses:
+        2XX:
+          description: Created navigation property.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.externalConnectors.externalActivity'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+  '/external/connections/{externalConnection-id}/items/{externalItem-id}/activities/{externalActivity-id}':
+    get:
+      tags:
+        - external.externalConnection
+      summary: Get activities from external
+      description: Returns a list of activities performed on the item. Write-only.
+      operationId: external.connection.item_GetActivity
+      parameters:
+        - name: externalConnection-id
+          in: path
+          description: The unique identifier of externalConnection
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalConnection
+        - name: externalItem-id
+          in: path
+          description: The unique identifier of externalItem
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalItem
+        - name: externalActivity-id
+          in: path
+          description: The unique identifier of externalActivity
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalActivity
+        - name: $select
+          in: query
+          description: Select properties to be returned
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              enum:
+                - id
+                - startDateTime
+                - type
+                - performedBy
+              type: string
+        - name: $expand
+          in: query
+          description: Expand related entities
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              enum:
+                - '*'
+                - performedBy
+              type: string
+      responses:
+        2XX:
+          description: Retrieved navigation property
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.externalConnectors.externalActivity'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+    patch:
+      tags:
+        - external.externalConnection
+      summary: Update the navigation property activities in external
+      operationId: external.connection.item_UpdateActivity
+      parameters:
+        - name: externalConnection-id
+          in: path
+          description: The unique identifier of externalConnection
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalConnection
+        - name: externalItem-id
+          in: path
+          description: The unique identifier of externalItem
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalItem
+        - name: externalActivity-id
+          in: path
+          description: The unique identifier of externalActivity
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalActivity
+      requestBody:
+        description: New navigation property values
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/microsoft.graph.externalConnectors.externalActivity'
+        required: true
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.externalConnectors.externalActivity'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+    delete:
+      tags:
+        - external.externalConnection
+      summary: Delete navigation property activities for external
+      operationId: external.connection.item_DeleteActivity
+      parameters:
+        - name: externalConnection-id
+          in: path
+          description: The unique identifier of externalConnection
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalConnection
+        - name: externalItem-id
+          in: path
+          description: The unique identifier of externalItem
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalItem
+        - name: externalActivity-id
+          in: path
+          description: The unique identifier of externalActivity
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalActivity
+        - name: If-Match
+          in: header
+          description: ETag
+          style: simple
+          schema:
+            type: string
+      responses:
+        2XX:
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+  '/external/connections/{externalConnection-id}/items/{externalItem-id}/activities/{externalActivity-id}/performedBy':
+    get:
+      tags:
+        - external.externalConnection
+      summary: Get performedBy from external
+      description: Represents an identity used to identify who is responsible for the activity.
+      operationId: external.connection.item.activity_GetPerformedGraphBPre
+      parameters:
+        - name: externalConnection-id
+          in: path
+          description: The unique identifier of externalConnection
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalConnection
+        - name: externalItem-id
+          in: path
+          description: The unique identifier of externalItem
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalItem
+        - name: externalActivity-id
+          in: path
+          description: The unique identifier of externalActivity
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalActivity
+        - name: $select
+          in: query
+          description: Select properties to be returned
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              enum:
+                - id
+                - type
+              type: string
+        - name: $expand
+          in: query
+          description: Expand related entities
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              enum:
+                - '*'
+              type: string
+      responses:
+        2XX:
+          description: Retrieved navigation property
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.externalConnectors.identity'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+  '/external/connections/{externalConnection-id}/items/{externalItem-id}/activities/$count':
+    get:
+      tags:
+        - external.externalConnection
+      summary: Get the number of the resource
+      operationId: external.connection.item.activity_GetCount
+      parameters:
+        - name: externalConnection-id
+          in: path
+          description: The unique identifier of externalConnection
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalConnection
+        - name: externalItem-id
+          in: path
+          description: The unique identifier of externalItem
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalItem
+        - $ref: '#/components/parameters/search'
+        - $ref: '#/components/parameters/filter'
+      responses:
+        2XX:
+          $ref: '#/components/responses/ODataCountResponse'
+        default:
+          $ref: '#/components/responses/error'
+  '/external/connections/{externalConnection-id}/items/{externalItem-id}/microsoft.graph.externalConnectors.addActivities':
+    post:
+      tags:
+        - external.Actions
+      summary: Invoke action addActivities
+      operationId: external.connection.item_addActivity
+      parameters:
+        - name: externalConnection-id
+          in: path
+          description: The unique identifier of externalConnection
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalConnection
+        - name: externalItem-id
+          in: path
+          description: The unique identifier of externalItem
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: externalItem
+      requestBody:
+        description: Action parameters
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                activities:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/microsoft.graph.externalConnectors.externalActivity'
+              additionalProperties:
+                type: object
+        required: true
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/json:
+              schema:
+                title: Collection of externalActivityResult
+                type: object
+                properties:
+                  value:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/microsoft.graph.externalConnectors.externalActivityResult'
+                  '@odata.nextLink':
+                    type: string
+                    nullable: true
+                additionalProperties:
+                  type: object
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: action
+      x-ms-pageable:
+        nextLinkName: '@odata.nextLink'
+        operationName: listMore
   '/external/connections/{externalConnection-id}/items/$count':
     get:
       tags:
@@ -1770,6 +2213,39 @@ components:
               $ref: '#/components/schemas/microsoft.graph.externalConnectors.externalItemContent'
             properties:
               $ref: '#/components/schemas/microsoft.graph.externalConnectors.properties'
+            activities:
+              type: array
+              items:
+                $ref: '#/components/schemas/microsoft.graph.externalConnectors.externalActivity'
+              description: Returns a list of activities performed on the item. Write-only.
+              x-ms-navigationProperty: true
+          additionalProperties:
+            type: object
+    microsoft.graph.externalConnectors.externalActivity:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: externalActivity
+          type: object
+          properties:
+            startDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              description: 'The date and time when the particular activity occurred. The DateTimeOffset type represents date and time information using ISO 8601 format and is always in UTC time. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
+              format: date-time
+            type:
+              $ref: '#/components/schemas/microsoft.graph.externalConnectors.externalActivityType'
+            performedBy:
+              $ref: '#/components/schemas/microsoft.graph.externalConnectors.identity'
+          additionalProperties:
+            type: object
+    microsoft.graph.externalConnectors.externalActivityResult:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.externalConnectors.externalActivity'
+        - title: externalActivityResult
+          type: object
+          properties:
+            error:
+              $ref: '#/components/schemas/microsoft.graph.publicError'
           additionalProperties:
             type: object
     microsoft.graph.externalConnectors.connectionOperation:
@@ -1975,6 +2451,15 @@ components:
       type: object
       additionalProperties:
         type: object
+    microsoft.graph.externalConnectors.externalActivityType:
+      title: externalActivityType
+      enum:
+        - viewed
+        - modified
+        - created
+        - commented
+        - unknownFutureValue
+      type: string
     microsoft.graph.publicError:
       title: publicError
       type: object
@@ -2244,6 +2729,19 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.externalConnectors.externalItem'
+        '@odata.nextLink':
+          type: string
+          nullable: true
+      additionalProperties:
+        type: object
+    microsoft.graph.externalConnectors.externalActivityCollectionResponse:
+      title: Collection of externalActivity
+      type: object
+      properties:
+        value:
+          type: array
+          items:
+            $ref: '#/components/schemas/microsoft.graph.externalConnectors.externalActivity'
         '@odata.nextLink':
           type: string
           nullable: true
@@ -2685,6 +3183,12 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/microsoft.graph.externalConnectors.externalItemCollectionResponse'
+    microsoft.graph.externalConnectors.externalActivityCollectionResponse:
+      description: Retrieved collection
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/microsoft.graph.externalConnectors.externalActivityCollectionResponse'
     microsoft.graph.externalConnectors.connectionOperationCollectionResponse:
       description: Retrieved collection
       content:
